tests/type-check/good/obj-check.arr

a :: { b :: Number, c :: String } = { b : 5, c : "hello" }
b :: Number = a.b
c :: String = a.c

