tests/type-check/bad/obj-infer.arr

a = { b : 5, c : "hello" }
b :: String = a.b
c :: Number = a.c
